Customize A11y name for app shortcut search result

Introduce accessible_name property on SearchResultMetadata and
use it in SearchResultTileItemView instead of the title.

Set this property for ArcAppShortcutSearchResult to a string
that includes both the shortcut name and the app name.

Bug: 896771
Test: steps in bug
Change-Id: I75aa67b844741d2e1ab4f0eafb17ef25d1d18a4d
Reviewed-on: https://chromium-review.googlesource.com/c/1289330
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602711}
Former-commit-id: 82c60d400248a6a8acacf00688f6e3fb88e3279c