chrome/browser/ui/app_list/search/chrome_search_result.h
@@ -65,6 +65,7 @@ class ChromeSearchResult {
   void SetTitleTags(const Tags& tags);
   void SetDetails(const base::string16& details);
   void SetDetailsTags(const Tags& tags);
+  void SetAccessibleName(const base::string16& name);
   void SetRating(float rating);
   void SetFormattedPrice(const base::string16& formatted_price);
   void SetDisplayType(DisplayType display_type);
